--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,5 +4,8 @@ rcherrueau:
    # link: mailto:Ronan-Alexandre.Cherrueau@inria.fr
 avankemp:
    name: Alexandre van Kempen
+ad_ri3n_:
+   name: Adrien Lebre
+   link: http://www.emn.fr/x-info/alebre08/
    
    
